--- a/src/ListenTogether.Pages/Components/Player/PhoneView.razor.css
+++ b/src/ListenTogether.Pages/Components/Player/PhoneView.razor.css
@@ -1,4 +1,20 @@
 .small-img {
     height: 30px;
     width: 30px;
+    border-radius: 50%;
+    animation: spin 20s linear infinite;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.animation-paused {
+    animation-play-state: paused;
 }
