--- a/src/ListenTogether.Pages/Components/Player/PhoneView.razor.css
+++ b/src/ListenTogether.Pages/Components/Player/PhoneView.razor.css
@@ -18,3 +18,17 @@
 .animation-paused {
     animation-play-state: paused;
 }
+
+.music-name {
+    flex-shrink: 1;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: 1rem;
+}
+
+.music-artist {
+    font-size: 0.9rem;
+    flex-shrink: 0;
+    opacity: 0.7;
+}
