--- a/src/ListenTogether.Pages/Components/MusicResultView.razor.css
+++ b/src/ListenTogether.Pages/Components/MusicResultView.razor.css
@@ -3,11 +3,20 @@
     opacity: 0.5;
 }
 
-.artist {
-    opacity: 1;
+.music-info {
+    width: calc(100vh - 100px);
+    overflow: hidden;
+    white-space: nowrap;
 }
 
-.name-album {
+.name {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.artist-album {
+    overflow: hidden;
+    text-overflow: ellipsis;
     font-size: 13px;
     opacity: 0.7;
 }
