修改 base64 后出现斜杠时路由不匹配的问题

--- a/src/ListenTogether.Pages/Pages/SongMenuPage.razor
+++ b/src/ListenTogether.Pages/Pages/SongMenuPage.razor
@@ -1,4 +1,4 @@
-﻿@page "/song-menu/{platform:int}/{songMenuType:int}/{songMenuInfo}"
+﻿@page "/song-menu/{platform:int}/{songMenuType:int}/{*songMenuInfo}"
 @inherits MyComponentBase
 @inject IMusicNetworkService MusicNetworkService
 @inject IPlaylistService PlaylistService
