--- a/src/ListenTogether.Pages/Pages/PlayingPage.razor
+++ b/src/ListenTogether.Pages/Pages/PlayingPage.razor
@@ -78,7 +78,7 @@
             }
             else
             {
-                <ul style="transform:translateY(@(0-_offset)px)">
+                <ul style="width:100%;transform:translateY(@(0-_offset)px)">
 
                     @foreach (var lyric in _lyrics)
                     {
