--- a/src/ListenTogether.Pages/Components/Player/PhonePlayingView.razor
+++ b/src/ListenTogether.Pages/Components/Player/PhonePlayingView.razor
@@ -17,7 +17,7 @@
                        OnClick="@(()=>GotoAutoClosePage())" />
     </div>
 
-    <div class="d-flex align-center justify-space-between mt-2 mb-2">
+    <div class="d-flex align-center justify-space-between mt-3 mb-2">
         <div class="text-white time">
             <MudText Typo="Typo.caption">
                 @($"{Position?.position.Minutes:D2}:{Position?.position.Seconds:D2}")
@@ -40,7 +40,7 @@
         </div>
     </div>
 
-    <div class="d-flex align-center justify-space-around">
+    <div class="d-flex mt-3 align-center justify-space-around">
         <MudIconButton Size="Size.Small"
                        Style="color:var(--mud-palette-white);"
                        Icon="@RepeatIcon"
