--- a/src/ListenTogether.Pages/Shared/MainLayout.razor
+++ b/src/ListenTogether.Pages/Shared/MainLayout.razor
@@ -95,7 +95,7 @@
                 TableHover = "#182437",
                 DarkLighten = "#494C50",
                 Black = "#858585",
-                TextPrimary = "#D5D5D5",
+                TextPrimary = "#FFFFFF",
                 OverlayDark = "#7575757A"
             }
         };
