--- a/src/ListenTogether.Pages/Shared/NavMenu.razor
+++ b/src/ListenTogether.Pages/Shared/NavMenu.razor
@@ -1,22 +1,22 @@
 ﻿<nav class="navbar">
     <div class="navbar-item">
         <NavLink class="navbar-link" href="discover" Match="NavLinkMatch.All">
-            <span class="fas fa-headphones" aria-hidden="true"></span> 发现
+            <span class="navicon fas fa-headphones" aria-hidden="true"></span> 发现
         </NavLink>
     </div>
     <div class="navbar-item">
         <NavLink class="navbar-link" href="playlist" Match="NavLinkMatch.All">
-            <span class="fas fa-list" aria-hidden="true"></span> 播放列表
+            <span class="navicon fas fa-list" aria-hidden="true"></span> 播放列表
         </NavLink>
     </div>
     <div class="navbar-item">
         <NavLink class="navbar-link" href="my-favorite">
-            <span class="fas fa-heart" aria-hidden="true"></span> 我的歌单
+            <span class="navicon fas fa-heart" aria-hidden="true"></span> 我的歌单
         </NavLink>
     </div>
     <div class="navbar-item">
         <NavLink class="navbar-link" href="settings">
-            <span class="fas fa-user" aria-hidden="true"></span> 我的
+            <span class="navicon fas fa-user" aria-hidden="true"></span> 我的
         </NavLink>
     </div>
 </nav>
