--- a/src/ListenTogether.Pages/Shared/NavMenu.razor.css
+++ b/src/ListenTogether.Pages/Shared/NavMenu.razor.css
@@ -7,26 +7,26 @@
     .navbar-item {
         width: 100%;
         height: 30px;
-        font-size: 17px;
-        margin: 1px 5px 1px 5px;
+        margin-top: 8px;
+        margin-bottom: 8px;
+    }
+
+    .navicon {
+        display: flex;
+        align-content: center;
+        flex-wrap: wrap;
+        margin-right: 5px;
     }
 
     ::deep .navbar-link {
-        display: block;
+        display: flex;
+        padding: 8px 20px 8px 20px;
     }
 
-    ::deep .navbar-item a:active + * {
-        background-color: yellow;
-    }
-
-
-    ::deep .navbar-item:hover {
-        background-color: #C98FFF40;
-    }
-
-    ::deep a:hover {
-        color: inherit;
-    }
+        ::deep .navbar-link.active,
+        ::deep .navbar-link:hover {
+            background-color: var(--mud-palette-action-default-hover);
+        }
 }
 
 @media screen and (max-width: 960px) {
@@ -40,7 +40,18 @@
         flex-direction: column;
     }
 
-        ::deep .navbar-link span {
-            margin: 0 auto;
-        }
+    .navicon {
+        margin-bottom: 10px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+::deep .navbar-link.active,
+::deep .navbar-link:hover {
+    color: var(--mud-palette-primary);
+}
+
+.navbar-item {
+    font-size: 16px;
 }
