--- a/src/ListenTogether.Pages/Components/Player/PhoneView.razor.css
+++ b/src/ListenTogether.Pages/Components/Player/PhoneView.razor.css
@@ -19,16 +19,15 @@
     animation-play-state: paused;
 }
 
-.music-name {
-    flex-shrink: 1;
+.music-info {
+    width: 0;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
     font-size: 1rem;
 }
 
-.music-artist {
-    font-size: 0.9rem;
-    flex-shrink: 0;
-    opacity: 0.7;
+.play-btn {
+    height: 30px;
+    width: 30px;
 }
